[tool.poetry]
name = "cschwabpy"
version = "0.0.8"
description = ""
authors = ["Tony Wang <ivytony@gmail.com>"]
readme = "README.md"
packages = [{include = "cschwabpy"}]

[tool.poetry.dependencies]
python = "^3.10.13"
httpx = "^0.27.0"
pytest = "^8.2.1"
pre-commit = "^3.7.1"
pytest-asyncio = "^0.23.7"
pydantic = "^2.7.3"
prompt-toolkit = "^3.0.45"
pandas = "^2.2.2"
numpy = "^1.26.4"
pytz = "^2024.1"
arrow = "^1.3.0"
pytest-httpx = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
