[tool.poetry]
name = "cschwabpy"
version = "0.1.1"
description = ""
authors = ["Tony Wang <ivytony@gmail.com>"]
readme = "README.md"
packages = [{include = "cschwabpy"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.25.0"
pytest = "^7.2.1"
pre-commit = "^3.7.1"
pytest-asyncio = "^0.21.1"
pydantic = "^2.7.3"
prompt-toolkit = "^3.0.45"
pandas = "^2.2.2"
numpy = "^1.26.4"
pytz = "^2024.1"
arrow = "^1.3.0"
pytest-httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
