[tool.poetry]
name = "cschwabpy"
version = "0.1.4.8"
description = ""
authors = ["Tony Wang <ivytony@gmail.com>"]
readme = "README.md"
packages = [{include = "cschwabpy"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.26.0"
pydantic = "^2.7.3"
pandas = "^2.2.2"
numpy = "^1.26.4"
pytz = "^2024.1"
arrow = "^1.3.0"
aiofiles = "^24.1.0"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"
pre-commit = "^3.7.1"
pytest-httpx = "^0.29.0"
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
prompt-toolkit = "^3.0.45"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
